--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
   },
   "homepage": "https://github.com/villettec/Sticky_Note_App-MERN#readme",
   "dependencies": {
-    "express": "^4.18.1"
+    "date-fns": "^2.29.3",
+    "express": "^4.18.1",
+    "uuid": "^9.0.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.20"
