--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   },
   "homepage": "https://github.com/villettec/Sticky_Note_App-MERN#readme",
   "dependencies": {
+    "cookie-parser": "^1.4.6",
     "date-fns": "^2.29.3",
     "express": "^4.18.1",
     "uuid": "^9.0.0"
